# transcomonitor

./: .env.example  .gitignore  .rscignore  README.md  app.py  pyproject.toml  requirements.txt
config/: config.yml
data/seed/: .gitkeep
db/: database.py  engine.py  models.py  schema_sqlite.sql
docs/: DEPLOYMENT.md
docs/userdoc/: 01_vue_ensemble.md  02_modele_donnees.md  03_types_valeurs.md  04_workflows.md  05_onglets_utilisateur.md  06_admin_users.md  07_admin_parametres.md  08_admin_secrets.md  09_admin_backup.md  10_admin_listes.md  11_algorithmes.md
modules/: mod_admin.py  mod_auth.py  mod_documentation.py  mod_ect_browser.py  mod_export.py  mod_mapping_edit.py  mod_mapping_table.py  mod_worklist.py
scripts/: bootstrap_cim11_refs.py  deploy_shinyapps.sh
services/: audit.py  authz.py  exporter.py  foundation.py  ingest.py  problematiques.py  who_proxy.py
tests/: test_app_smoke.py  test_audit.py  test_authz.py  test_bootstrap_cim11_refs.py  test_config_manager.py  test_database.py  test_engine.py  test_exporter.py  test_foundation.py  test_ingest.py  test_mapping_edit.py  test_mapping_table.py  test_models.py  test_s3_storage.py  test_security_crypto.py  test_worklist.py
utils/: config_manager.py  crypto.py  s3_storage.py  security.py
www/: custom.css  ect_bridge.js
